--- a/assets/style.css
+++ b/assets/style.css
@@ -121,6 +121,7 @@ a{
 
 .sobre{
     display: flex;
+    background-color:midnightblue;
     flex-direction: column;
     padding: 90px 100px 20px 100px;
     color: #fff;
