--- a/assets/style.css
+++ b/assets/style.css
@@ -141,17 +141,9 @@ a{
 }
 
 .entalhe{
-  background-color: #05DBF2;
-  height: 5px;
-  width: 135px;
-  margin-top: 10px;
-  margin-bottom: 30px;
-}
-
-.entalhe-sobre{
     background-color: #05DBF2;
-    height: 5px;
-    width: 135px;
+    height: 8px;
+    width: 60px;
     margin-top: 10px;
     margin-bottom: 30px;
 }
@@ -161,7 +153,7 @@ a{
     line-height: 1.5;
 }
 
-.sobre .botoes{
+.sobre a{
     background-color: #05DBF2;
     padding: 5px;
     width: 200px;
@@ -174,12 +166,9 @@ a{
     transition: all linear 0.3s;
 }
 
-.sobre .botoes:hover{
+.sobre a:hover{
+    box-shadow: 0 0 5px #FFF;
     background-color:mediumspringgreen;
-}
-
-.sobre .faculdade:hover {
-    color: #05DBF2;
 }
 
 .right{
@@ -229,70 +218,6 @@ a{
 }
 
 /**************************************************/
-/*            CONTAINER - CONHECIMENTOS                  */
-/**************************************************/
-
-.conhecimentos{
-  display: flex;
-  flex-direction: column;
-  padding: 90px 100px 20px 100px;
-  color: #fff;
-}
-
-.entalhe-conhecimentos{
-  background-color: #05DBF2;
-  height: 5px;
-  width: 182px;
-  margin-top: 10px;
-  margin-bottom: 30px;
-}
-
-.imgsobre {
-  height: 240px;
-  width: 240px;
-  border-radius: 125px;
-  background-image: url(archives/imagem-sobre.jpeg);
-  background-size: cover;
-  background-position: bottom;
-  box-shadow: 0 0 30px #000;
-  margin-bottom: 30px;
-  margin-top: 0px;
-}
-
-.linguagens {
-  color: #FFF;
-  margin-top: 5px;
-}
-
-.titulo-linguagens {
-  color: gold;
-}
-
-.titulo-frameworks {
-  color: crimson;
-}
-
-.titulo-banco {
-  color: indigo;
-}
-
-.titulo-linguagens:hover {
-  font-size: 26px;
-  transition: all linear 0.1s;
-}
-
-.titulo-frameworks:hover {
-  font-size: 26px;
-  transition: all linear 0.1s;
-}
-
-.titulo-banco:hover {
-  font-size: 26px;
-  transition: all linear 0.1s;
-}
-
-
-/**************************************************/
 /*            CONTAINER - PROJETOS                */
 /**************************************************/
 
@@ -302,14 +227,6 @@ a{
     padding: 90px 50px 20px 50px;
     background-color: rgba(0, 0, 0, 0.90);
     color: #fff;
-}
-
-.entalhe-projetos{
-  background-color: #05DBF2;
-  height: 5px;
-  width: 122px;
-  margin-top: 10px;
-  margin-bottom: 30px;
 }
 
 .upper{
@@ -390,18 +307,6 @@ a{
     flex-direction: column;
     padding: 90px 100px 20px 100px;
     color: #fff;
-}
-
-.entalhe-contato{
-  background-color: #05DBF2;
-  height: 5px;
-  width: 112px;
-  margin-top: 10px;
-  margin-bottom: 30px;
-}
-
-.links:hover {
-    color: cyan;
 }
 
 .contatolower{
