--- a/assets/style.css
+++ b/assets/style.css
@@ -252,7 +252,7 @@ a{
 /**************************************************/
 
 .conhecimentos {
-    background-color: #000000;
+    background-color: #1b1a1a;
     color: #FFF;
 }
 
