--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,66 @@ h1, h2, h3, h4, h5, h6 {
   white-space: nowrap;
 }
 
+button {
+  font-size: 1.25rem;
+  background-color: royalblue;
+  color: white;
+  padding: 0.7em 1em;
+  padding-left: 0.9em;
+  display: flex;
+  align-items: center;
+  border: none;
+  border-radius: 16px;
+  overflow: hidden;
+  transition: all 0.2s;
+}
+
+button span {
+  display: block;
+  margin-left: 0.3em;
+  transition: all 0.3s ease-in-out;
+}
+
+button i {
+  display: block;
+  transform-origin: center center;
+  transition: transform 0.3s ease-in-out;
+}
+
+button:hover .wrapper {
+  animation: fly 0.6s ease-in-out infinite alternate;
+}
+
+button:hover i{
+  transform: translateX(1.2em) rotate(45deg);
+  scale(1.1);
+}
+
+button:hover span {
+  transform: translateX(3.8em);
+}
+
+button:hover svg {
+  transition: 0.6s;
+  transform: translateX(1.6em);
+}
+
+button:active {
+  transform: scale(0.95);
+}
+
+@keyframes fly {
+  form {
+    transform: translateY(0.1em);
+  }
+  to {
+    transform: translateY(-0.1em);
+  }
+}
+
+
+
+
 .nav-menu a {
   display: flex;
   align-items: center;
@@ -983,19 +1043,9 @@ section {
 }
 
 .botaoEmail {
-  border-radius: 10px;
-  border: none;
-  background-color: #2d16aa;
-  width: 140px;
-  color: white;
-  height: 35px;
-  align-items: center;
-}
-
-.botaoEmail:hover {
-  background-color: #4553cf;
-  color: white;
-  transition: 0.6s;
+  margin-bottom: 32px;
+  margin-top: 20px;
+  height: 40px;
 }
 
 
