--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,7 +312,7 @@ button:hover .wrapper {
 
 button:hover i{
   transform: translateX(1.2em) rotate(45deg);
-  scale(1.1);
+  scale: 1.1;
 }
 
 button:hover span {
@@ -1100,6 +1100,17 @@ section {
 .contact .info {
   width: 100%;
   background: #fff;
+}
+
+dialog::backdrop {
+  background-color: rgb(0 0 0 / .5);
+}
+
+dialog {
+  border: none;
+  border-radius: .5rem;
+  box-shadow: 0 0 1em rgb(0 0 0 / .3);
+  width: 80%;
 }
 
 .inputsEmail {
